# erasable

./: Cargo.toml  rustfmt.toml
src/: erasable_slice.rs  lib.rs  thin.rs
tests/: this_is_ub_examples.rs
