[package]
name = "erasable"
version = "2.0.0"
edition = "2021"
rust-version = "1.56"

description = "Type-erased thin pointers."
repository = "https://github.com/point-rs/erasable"
keywords = ["thin", "pointer", "type", "erasure"]
categories = ["data-structures", "no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
scopeguard = { version = "1.1.0", default-features = false }

[dev-dependencies]
either = "1.5.3"
static_assertions = "1.1.0"

[[test]]
name = "abuse"
path = "tests/abuse.rs"
required-features = ["alloc"]
